--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -5,7 +5,7 @@ date: 2020-11-25T08:54:58.532Z
 ---
 Rückblende! Die beiden Präsidenten  Hoeness und Agnelli stellen ihren „Direttori Sportivi“ Hasan Salihamidzic auf der einen und Fabio Paratici auf der andern Seite gleichviel „Cash“ zur Verfügung. Der Auftrag lautet: „Bastelt mir eine Elf zusammen, die spätestens in 4-5 Jahren die Champions League gewinnt.“
 
-Hasan, ein ausgebuffter Typ, geht zusammen mit Fabio, der ebenfalls glaubt, zur Spezie der „Abgezockten“ zu gehören, auf den Bazar bzw. auf den Jahrmarkt. Zwischen ehemaliger EPA und Raiffeisenbank lauern Schnäppchen, wohin das Auge reicht. Danil, Alex Sandro, Rabiot, Ramsey, Arthur, Bernardeschi, Douglas Costa, Dybala und Higuain. Auf den ersten Blick verlockend, wie die Nutten auf dem Kiez. Hasan das clevere Kerlchen lässt die Schönheiten links liegen, in der Hoffnung, dass sein Gegenspieler „blind“ zuschlägt.
+Hasan, ein ausgebuffter Typ, geht zusammen mit Fabio, der ebenfalls glaubt, zur Spezie der „Abgezockten“ zu gehören, auf den Bazar bzw. auf den Jahrmarkt. Zwischen ehemaliger EPA und Raiffeisenbank lauern Schnäppchen, wohin das Auge reicht. Danilo, Alex Sandro, Rabiot, Ramsey, Arthur, Bernardeschi, Douglas Costa, Dybala und Higuain. Auf den ersten Blick verlockend, wie die Nutten auf dem Kiez. Hasan das clevere Kerlchen lässt die Schönheiten links liegen, in der Hoffnung, dass sein Gegenspieler „blind“ zuschlägt.
 
 Weiter unten, am Ende des „Boulevard“, zwischen „Haus zum Hammer“ und „Blue“ stehen ein paar grüne „Möchtegern“. Kimmuch, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit Ziehvater Lewandowski. Auf den ersten Blick weniger „sexy“, dafür aber effizient. „Sali“ legt die Moneten auf den Tisch und landet ganz nebenbei mit „Lewa“ den Coup des Jahrzehnts.
 
