--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -7,7 +7,7 @@ Rückblende! Die beiden Präsidenten  Hoeness und Agnelli stellen ihren „Diret
 
 Hasan, ein ausgebuffter Typ, geht zusammen mit Fabio, der ebenfalls glaubt, zur Spezie der „Abgezockten“ zu gehören, auf den Bazar bzw. auf den Jahrmarkt. Zwischen ehemaliger EPA und Raiffeisenbank lauern Schnäppchen, wohin das Auge reicht. Danilo, Alex Sandro, Rabiot, Ramsey, Arthur, Bernardeschi, Douglas Costa, Dybala und Higuain. Auf den ersten Blick verlockend, wie die Nutten auf dem Kiez. Hasan das clevere Kerlchen lässt die Schönheiten links liegen, in der Hoffnung, dass sein Gegenspieler „blind“ zuschlägt.
 
-Weiter unten, am Ende des „Boulevard“, zwischen „Haus zum Hammer“ und „Blue“ stehen ein paar grüne „Möchtegern“. Kimmuch, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit Ziehvater Lewandowski. Auf den ersten Blick weniger „sexy“, dafür aber effizient. „Sali“ legt die Moneten auf den Tisch und landet ganz nebenbei mit „Lewa“ den Coup des Jahrzehnts.
+Weiter unten, am Ende des „Boulevard“, zwischen „Haus zum Hammer“ und „Blue“ stehen ein paar grüne „Möchtegern“. Kimmich, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit Ziehvater Lewandowski. Auf den ersten Blick weniger „sexy“, dafür aber effizient. „Sali“ legt die Moneten auf den Tisch und landet ganz nebenbei mit „Lewa“ den Coup des Jahrzehnts.
 
 August 2020! Bayern München holt sich verdientermassen den Pot und Juve fliegt im Achtelfinale jämmerlich gegen Lyon aus dem Wettbewerb. Mai 2050! In der Zwischenzeit haben die Bayern die Kristallkugel weitere viermal abgeräumt. Juve träumt indessen weiter vor sich hin und wartet nun seit 54 Jahren auf die Erlösung. Mittlerweile liegen dank Hoeness und Salihamidzic Millionen und Abermillionen in der Portokasse. Paratici, inzwischen hinter “schwedischen Gardinen“, hat mit “gütiger Mithilfe“ von Agnelli einen dreistelligen Millionenbetrag an Schulden angehäuft.
 
