--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -3,7 +3,7 @@ title: "Rot oder Schwarz "
 draft: true
 date: 2020-11-25T08:54:58.532Z
 ---
-Rückblende! Die beiden Präsidenten  Hoeness und Agnelli stellen ihren „Direttori Sportivi“ Hasan Salihamidzic auf der einen und Fabio Paratici auf der andern Seite gleichviel „Cash“ zur Verfügung. Der Auftrag lautet: „Bastelt mir eine Elf zusammen, die spätestens in 4-5 Jahren die Champions League gewinnt.“
+Rückblenden Die beiden Präsidenten  Hoeness und Agnelli stellen ihren „Direttori Sportivi“ Hasan Salihamidzic auf der einen und Fabio Paratici auf der andern Seite gleichviel „Cash“ zur Verfügung. Der Auftrag lautet: „Bastelt mir eine Elf zusammen, die spätestens in 4-5 Jahren die Champions League gewinnt.“
 
 Hasan, ein ausgebuffter Fuchs, geht zusammen mit Fabio, der ebenfalls glaubt, zur Spezie der „Abgezockten“ zu gehören, auf den Bazar bzw. auf den Jahrmarkt. Zwischen ehemaliger EPA und Raiffeisenbank lauern Schnäppchen, wohin das Auge reicht. Danilo, Alex Sandro, Rabiot, Ramsey, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Auf den ersten Blick verlockend, wie die Nutten auf dem Kiez. Hasan das clevere Kerlchen lässt die Schönheiten links liegen, im Wissen, dass sein Gegenspieler „blind“ zuschlägt.
 
