--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Rot oder Schwarz "
+title: "Versäumnisse "
 draft: true
 date: 2020-11-25T08:54:58.532Z
 ---
-Rückblenden Die beiden Präsidenten  Hoeness und Agnelli stellen ihren „Direttori Sportivi“ Hasan Salihamidzic auf der einen und Fabio Paratici auf der andern Seite gleichviel „Cash“ zur Verfügung. Der Auftrag lautet: „Bastelt mir eine Elf zusammen, die spätestens in 4-5 Jahren die Champions League gewinnt.“
+Real, Bayern und mit Abstrichen Barcelona❗️In den vergangenen Jahren meistens ganz oben anzutreffen. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung, die Trainer, die über Erfolg und Misserfol entscheiden oder was steckt wirklich dahinter. Ich habe mir meine Meinung schon längst gebildet, der wesentliche Unterschied liegt bei der Spielerauswahl. Vergleicht man zum Beispiel Juve mit Bayern in der Annahme, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus.
 
-Hasan, ein ausgebuffter Fuchs, geht zusammen mit Fabio, der ebenfalls glaubt, zur Spezie der „Abgezockten“ zu gehören, auf den Bazar bzw. auf den Jahrmarkt. Zwischen ehemaliger EPA und Raiffeisenbank lauern Schnäppchen, wohin das Auge reicht. Danilo, Alex Sandro, Rabiot, Ramsey, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Auf den ersten Blick verlockend, wie die Nutten auf dem Kiez. Hasan das clevere Kerlchen lässt die Schönheiten links liegen, im Wissen, dass sein Gegenspieler „blind“ zuschlägt.
+Salihamidzic schlägt seinen Widersacher Paratici um Längen. Die Aufwand- und Ertragsrechnung ist für Juve erschreckend. Danilo, Alex Sandro, Rabiot, Ramsey, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Auf den ersten Blick verlockend, wie die Nutten auf dem Kiez. Hasan das clevere Kerlchen lässt die Schönheiten links liegen, im Wissen, dass sein Gegenspieler „blind“ zuschlägt.
 
 Weiter unten, am Ende des „Boulevard“, zwischen „Haus zum Hammer“ und „Blue“ stehen ein paar grüne „Möchtegern“. Kimmich, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit Ziehvater Lewandowski. Auf den ersten Blick weniger „sexy“, dafür aber effizient. „Sali“ legt die Moneten auf den Tisch und landet ganz nebenbei mit „Lewa“ den Coup des Jahrzehnts.
 
