--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -3,9 +3,9 @@ title: "Versäumnisse "
 draft: true
 date: 2020-11-25T08:54:58.532Z
 ---
-Real, Bayern und mit Abstrichen Barcelona❗️In den vergangenen Jahren meistens ganz oben anzutreffen. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung, die Trainer, die über Erfolg und Misserfol entscheiden oder was steckt wirklich dahinter. Ich habe mir meine Meinung schon längst gebildet, der wesentliche Unterschied liegt bei der Spielerauswahl. Vergleicht man zum Beispiel Juve mit Bayern in der Annahme, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus.
+Real, Bayern und mit Abstrichen Barcelona❗️Das Trio, das in den vergangenen Jahren auf europäischer Bühne meistens ganz oben anzutreffen war. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung oder die Trainer, die über Erfolg und Misserfolg entschIdeen haben oder was steckt wirklich dahinter. Ich habe mir meine Meinung schon längst gebildet. Der wesentliche Unterschied liegt bei der Spielerauswahl. Vergleicht man zum Beispiel Juve mit Bayern in der Annahme, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus.
 
-Salihamidzic schlägt seinen Widersacher Paratici um Längen. Die Aufwand- und Ertragsrechnung ist für Juve erschreckend. Danilo, Alex Sandro, Rabiot, Ramsey, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Auf den ersten Blick verlockend, wie die Nutten auf dem Kiez. Hasan das clevere Kerlchen lässt die Schönheiten links liegen, im Wissen, dass sein Gegenspieler „blind“ zuschlägt.
+Warum schlägt Salihamidzic seinen Widersacher Paratici um Längen. Warum steht bei Juve Aufwand und Ertrag in keinem Verhältnis❓ Man braucht nur die Panin-Alben zu öffnen und man weiss Bescheid. Juve’s Einkäufe sind mit zahlreichen Fehlinvestitionen „geschmückt“. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die kostspieligsten aufzuzählen.
 
 Weiter unten, am Ende des „Boulevard“, zwischen „Haus zum Hammer“ und „Blue“ stehen ein paar grüne „Möchtegern“. Kimmich, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit Ziehvater Lewandowski. Auf den ersten Blick weniger „sexy“, dafür aber effizient. „Sali“ legt die Moneten auf den Tisch und landet ganz nebenbei mit „Lewa“ den Coup des Jahrzehnts.
 
