--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -2,13 +2,16 @@
 title: Rot oder Schwarz❓
 draft: true
 date: 2020-11-25T08:54:58.532Z
+image: img/b86fa72f-3c4e-45b7-ac1b-2a39698d19fb.jpeg
 ---
-Real, Bayern und mit Abstrichen Barcelona❗️Das Trio, das in den vergangenen Jahren auf europäischer Bühne meistens ganz oben anzutreffen war. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung oder die Trainer, die über Erfolg und Misserfolg entschIdeen haben oder was steckt wirklich dahinter. Ich habe mir meine Meinung schon längst gebildet. Der wesentliche Unterschied liegt bei der Spielerauswahl. Vergleicht man zum Beispiel Juve mit Bayern in der Annahme, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus.
+Real, Bayern und mit Abstrichen Barcelona❗️Das Trio, das in den vergangenen Jahren auf europäischer Bühne meistens ganz oben anzutreffen war. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung oder die Trainer, die über Erfolg und Misserfolg entschieden haben oder was steckt wirklich dahinter. 
 
-Warum schlägt Salihamidzic seinen Widersacher Paratici um Längen. Warum steht bei Juve Aufwand und Ertrag in keinem Verhältnis❓ Man braucht nur die Panin-Alben zu öffnen und man weiss Bescheid. Juve’s Einkäufe sind mit zahlreichen Fehlinvestitionen „geschmückt“. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die kostspieligsten aufzuzählen.
+Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der Spieler. Vergleicht man zum Beispiel Bayern mit Juve in der Annahme, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus.
 
-Weiter unten, am Ende des „Boulevard“, zwischen „Haus zum Hammer“ und „Blue“ stehen ein paar grüne „Möchtegern“. Kimmich, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit Ziehvater Lewandowski. Auf den ersten Blick weniger „sexy“, dafür aber effizient. „Sali“ legt die Moneten auf den Tisch und landet ganz nebenbei mit „Lewa“ den Coup des Jahrzehnts.
+Aufwand und Ertrag stimmt bei Juve schon lange nicht mehr. Weil Paratici im Fernduell gegen Salihamidcic sang-und klanglos untergeht. Panin-Alben auf und der Fall ist besprochen.Juve’s Einkäufe sind begleitet von Fehlinvestitionen, soweit das Auge reicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen.
 
-August 2020! Bayern München holt sich verdientermassen den Pot und Juve fliegt im Achtelfinale jämmerlich gegen Lyon aus dem Wettbewerb. Mai 2050! In der Zwischenzeit haben die Bayern die Kristallkugel weitere viermal abgeräumt. Juve träumt indessen weiter vor sich hin und wartet nun seit 54 Jahren auf die Erlösung. Mittlerweile liegen dank Hoeness und Salihamidzic Millionen und Abermillionen in der Portokasse. Paratici, inzwischen hinter “schwedischen Gardinen“, hat mit “gütiger Mithilfe“ von Agnelli einen dreistelligen Millionenbetrag an Schulden angehäuft.
+Bayerns Antwort ist vernichten.  Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit „Traumlos“ Lewandowski. Auf den ersten Blick vielleicht weniger „sexy“, dafür aber effizient.
+
+August 2020❗️Die Bayern holen den Pot und Juve fliegt mit seinem überschätzten Kader gegen ein höchst durchschnittliches Lyon im Achtelfinale aus dem Wettbewerb. Mai 2050! In der Zwischenzeit haben die Bayern die Kristallkugel weitere viermal abgeräumt. Juve träumt indessen weiter vor sich hin und wartet nun seit 54 Jahren auf die Erlösung. Mittlerweile liegen dank Hoeness und Salihamidzic Millionen und Abermillionen in der Portokasse. Paratici hat, falls man ihn nicht endlich vor die Tür gesetzt hat einen dreistelligen Millionenbetrag an Schulden angehäuft.
 
 So läuft das, wenn man auf die falschen Pferdchen setzt....
