--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -1,8 +1,8 @@
 ---
-title: Rot oder Schwarz❓
+title: "Danebengelangt "
 draft: true
 date: 2020-11-25T08:54:58.532Z
-image: img/b86fa72f-3c4e-45b7-ac1b-2a39698d19fb.jpeg
+image: img/8eba9a83-9992-4b7a-8bc4-c9e6436aa585.jpeg
 ---
 Real, Bayern und mit Abstrichen Barcelona❗️Das Trio, das in den vergangenen Jahren auf europäischer Bühne meistens ganz oben anzutreffen war. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung oder die Trainer, die über Erfolg und Misserfolg entschieden haben oder was steckt wirklich dahinter. 
 
