--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -4,11 +4,11 @@ draft: true
 date: 2020-12-15T11:28:27.679Z
 image: img/8eba9a83-9992-4b7a-8bc4-c9e6436aa585.jpeg
 ---
-Real Madrid, Bayern München und mit Abstrichen der FC Barcelona❗️Das Trio, das in den vergangenen Jahren auf europäischer Bühne meistens ganz oben anzutreffen war. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung oder die Trainer, die über Erfolg und Misserfolg entschieden haben oder was steckt wirklich dahinter. 
+Real Madrid, Bayern München und mit Abstrichen der FC Barcelona❗️Das Trio, das in den vergangenen Jahren auf europäischer Bühne meistens ganz oben anzutreffen war. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung oder die Trainer, die über Erfolg und Misserfolg entschieden haben oder was steckt wirklich dahinter❓
 
-Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der Spieler. Vergleicht man zum Beispiel Bayern mit Juve und geht davon aus, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus.
+Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der Spieler. Vergleicht man zum Beispiel Bayern mit Juve und geht davon aus, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus. Aufwand und Ertrag stimmt bei Juve schon lange nicht mehr. Weil Paratici im Fernduell gegen Salihamidcic sang-und klanglos untergeht. Wer die Panin-Alben aufklappt, hat das Resultat „schwarz auf weiss“.  Fehlinvestitionen, soweit das Auge reicht. 
 
-Aufwand und Ertrag stimmt bei Juve schon lange nicht mehr. Weil Paratici im Fernduell gegen Salihamidcic sang-und klanglos untergeht. Panin-Alben auf und der Fall ist besprochen.Juve’s Einkäufe sind begleitet von Fehlinvestitionen, soweit das Auge reicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen.
+Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen.
 
 Bayerns Antwort ist vernichten.  Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit „Traumlos“ Lewandowski. Auf den ersten Blick vielleicht weniger „sexy“, dafür aber effizient.
 
