--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -6,9 +6,9 @@ image: img/8eba9a83-9992-4b7a-8bc4-c9e6436aa585.jpeg
 ---
 Real Madrid, Bayern München und mit Abstrichen der FC Barcelona❗️Das Trio, das in den vergangenen Jahren auf europäischer Bühne meistens ganz oben anzutreffen war. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung oder die Trainer, die über Erfolg und Misserfolg entschieden haben oder was steckt wirklich dahinter❓
 
-Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der Spieler. Vergleicht man zum Beispiel Bayern mit Juve und geht davon aus, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus. Aufwand und Ertrag stimmt bei Juve schon lange nicht mehr. Weil Paratici im Fernduell gegen Salihamidcic sang-und klanglos untergeht. Wer die Panin-Alben aufklappt, hat das Resultat „schwarz auf weiss“.  Fehlinvestitionen, soweit das Auge reicht. 
+Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der Spieler. Vergleicht man zum Beispiel Bayern mit Juve und geht davon aus, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus. Seit Paratici im Fernduell gegen Salihamidzic regelmässig den Kürzeren zieht, ist Aufwand und Ertrag bei Juve „aus dem Ruder gelaufen“.
 
-Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen.
+Wer die Panini-Alben aufklappt, hat das Resultat „schwarz auf weiss“.  Fehlinvestitionen, soweit das Auge reicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen. Auf der Habenseite ist wenig zu verbuchen. De Ligt, Demiral, Bentancourt, Kulusewski und vielleicht Morata.
 
 Bayerns Antwort ist vernichten.  Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit „Traumlos“ Lewandowski. Auf den ersten Blick vielleicht weniger „sexy“, dafür aber effizient.
 
