--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -8,7 +8,7 @@ Real Madrid, Bayern München und mit Abstrichen der FC Barcelona❗️Das Trio, 
 
 Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der Spieler. Vergleicht man zum Beispiel Bayern mit Juve und geht davon aus, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus. Seit Paratici im Fernduell gegen Salihamidzic regelmässig den Kürzeren zieht, ist Aufwand und Ertrag bei Juve „aus dem Ruder gelaufen“.
 
-Wer die Panini-Alben aufklappt, hat das Resultat „schwarz auf weiss“.  Fehlinvestitionen, soweit das Auge reicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen. Auf der Habenseite ist wenig zu verbuchen. De Ligt, Demiral, Bentancourt, Kulusewski und vielleicht Morata.
+Wer die Panini-Alben aufklappt, hat das Resultat „schwarz auf weiss“.  Fehlinvestitionen soweit das Auge reicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen. Auf der Habenseite ist wenig zu verbuchen. De Ligt, Demiral, Bentancourt, Kulusewski und vielleicht Morata.
 
 Bayerns Antwort ist vernichten.  Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit „Traumlos“ Lewandowski. Auf den ersten Blick vielleicht weniger „sexy“, dafür aber effizient.
 
