--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -8,10 +8,10 @@ Real Madrid, Bayern München und mit Abstrichen der FC Barcelona❗️Das Trio, 
 
 Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der Spieler. Vergleicht man zum Beispiel Bayern mit Juve und geht davon aus, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus. Seit Paratici im Fernduell gegen Salihamidzic regelmässig den Kürzeren zieht, ist Aufwand und Ertrag bei Juve „aus dem Ruder gelaufen“.
 
-Panini-Alben auf und die Fehlinvestitionen springen dir mitten ins Gesicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen. Auf der Habenseite ist wenig zu verbuchen. De Ligt, Demiral, Cuadrado,  und falls wir Glück haben Morata, Chiesa und Kulusewski.
+Panini-Alben auf und die Fehlinvestitionen springen uns förmlich ins Gesicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen. Auf der Habenseite ist wenig zu verbuchen. De Ligt, Demiral, Cuadrado,  und falls wir Glück haben Morata, Chiesa und Kulusewski.
 
-Bayerns Antwort ist vernichten.  Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit „Traumlos“ Lewandowski. Auf den ersten Blick vielleicht weniger „sexy“, dafür aber effizient.
+Bayerns Antwort ist vernichtend❗️Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit  dem „Traumlos“ Lewandowski. Auf den ersten Blick weniger „sexy“, dafür sehr effizient.
 
-August 2020❗️Die Bayern holen den Pot und Juve fliegt mit seinem überschätzten Kader gegen ein höchst durchschnittliches Lyon im Achtelfinale aus dem Wettbewerb. Mai 2050! In der Zwischenzeit haben die Bayern die Kristallkugel weitere viermal abgeräumt. Juve träumt indessen weiter vor sich hin und wartet nun seit 54 Jahren auf die Erlösung. Mittlerweile liegen dank Hoeness und Salihamidzic Millionen und Abermillionen in der Portokasse. Paratici hat, falls man ihn nicht endlich vor die Tür gesetzt hat einen dreistelligen Millionenbetrag an Schulden angehäuft.
+Rückblende und Vorausschau❗️Die Bayern holen im August 2020 den Pot und Juve fliegt mit seinem überschätzten Kader gegen ein höchst durchschnittliches Lyon im Achtelfinale aus dem Wettbewerb. Mai 2050❗️In der Zwischenzeit haben die Bayern die Kristallkugel weitere viermal abgeräumt. Juve träumt indessen weiter vor sich hin und wartet nun seit 54 Jahren auf die Erlösung. Mittlerweile liegen dank Hoeness und Salihamidzic Millionen und Abermillionen in der Portokasse. Paratici hat, falls man ihn nicht endlich vor die Tür gesetzt hat einen dreistelligen Millionenbetrag an Schulden angehäuft.
 
 So läuft das, wenn man auf die falschen Pferdchen setzt....
