--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -12,6 +12,6 @@ Panini-Alben auf und die Fehlinvestitionen springen uns förmlich ins Gesicht. C
 
 Bayerns Antwort ist vernichtend❗️Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman und Sané mit  dem „Traumlos“ Lewandowski. Auf den ersten Blick weniger „sexy“, dafür sehr effizient.
 
-Rückblende und Vorausschau❗️Die Bayern holen im August 2020 den Pot und Juve fliegt mit seinem überschätzten Kader gegen ein höchst durchschnittliches Lyon im Achtelfinale aus dem Wettbewerb. Mai 2050❗️In der Zwischenzeit haben die Bayern die Kristallkugel weitere viermal abgeräumt. Juve träumt indessen weiter vor sich hin und wartet nun seit 54 Jahren auf die Erlösung. Mittlerweile liegen dank Hoeness und Salihamidzic Millionen und Abermillionen in der Portokasse. Paratici hat, falls man ihn nicht endlich vor die Tür gesetzt hat einen dreistelligen Millionenbetrag an Schulden angehäuft.
+Die Bayern holten im August den CL-Pot und Juve flog mit seinem überschätzten Kader gegen ein höchst durchschnittliches Lyon im Achtelfinale aus dem Wettbewerb. Mai 2050❗️In der Zwischenzeit haben die Bayern die Kristallkugel weitere viermal abgeräumt. Juve träumt indessen weiter vor sich hin und wartet nun seit 54 Jahren auf die Erlösung. Mittlerweile liegen dank Hoeness und Salihamidzic Millionen und Abermillionen in der Portokasse. Paratici hat, falls man ihn nicht endlich vor die Tür gesetzt hat einen dreistelligen Millionenbetrag an Schulden angehäuft.
 
 So läuft das, wenn man auf die falschen Pferdchen setzt....
