--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -1,5 +1,5 @@
 ---
-title: "Danebengelangt "
+title: Aufs falsche Pferd gesetzt
 draft: true
 date: 2020-12-15T11:28:27.679Z
 image: img/8eba9a83-9992-4b7a-8bc4-c9e6436aa585.jpeg
