--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -8,7 +8,7 @@ Real Madrid, Bayern München und mit Abstrichen der FC Barcelona❗️Das Trio, 
 
 Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der sogenannten „Stars“. Vergleicht man zum Beispiel Bayern mit Juve und geht davon aus, dass  beide ungefähr gleichviel „Cash“ zur Verfügung hatten, fällt das Resultat für die „Bianconeri“ ernüchternd aus. Seit Paratici im Fernduell gegen Salihamidzic regelmässig den Kürzeren zieht, ist Aufwand und Ertrag bei Juve „aus dem Ruder gelaufen“.
 
-Macht die Panini-Alben auf, liebe „Juventini“, und die Fehlinvestitionen springen euch förmlich ins Gesicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Matuidi, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen. Auf der Habenseite ist wenig zu verbuchen. De Ligt, Demiral, Cuadrado,  und falls wir Glück haben Morata, Chiesa und Kulusewski.
+Macht die Panini-Alben auf liebe „Juventini“ und die Fehlinvestitionen springen euch förmlich ins Gesicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Matuidi, Arthur, Bernardeschi, Douglas Costa, Dybala ,Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen. Auf der Habenseite ist wenig zu verbuchen. De Ligt, Demiral, Cuadrado,  und falls wir Glück haben Morata, Chiesa und Kulusewski.
 
 Bayerns Antwort ist vernichtend❗️Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman, Sané. und Volltreffer Lewandowski  zum Nulltarif von Dortmund. Auf den ersten Blick weniger „sexy“, dafür sehr effizient.
 
