--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -10,6 +10,6 @@ Der wesentlichste Unterschied liegt meiner Meinung nach bei der Auswahl der soge
 
 Öffnet die Panini-Alben liebe „Juventini“ und die Fehlinvestitionen springen euch förmlich ins Gesicht. Cancelo, Danilo, Alex Sandro, Rabiot, Ramsey, Khedira, Matuidi, Arthur, Bernardeschi, Douglas Costa, Dybala, Higuain und Ronaldo. Um nur die Mega-Transfers aufzuzählen. Auf der Habenseite ist wenig zu verbuchen. De Ligt, Demiral, Cuadrado, Bentancourt und falls wir Glück haben, McKennie, Morata, Chiesa und Kulusewski.
 
-Bayerns Antwort ist vernichtend❗️Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman, Sané und Volltreffer Lewandowski  zum Nulltarif von Dortmund. Auf den ersten Blick weniger „sexy“, dafür umso effizienter.
+Bayerns Antwort ist vernichtend❗️Kimmich, Süle, Alaba, Davies, Goretzka, Gnabry, Coman, Sané und Volltreffer Lewandowski von Dortmund zum Nulltarif. Auf den ersten Blick weniger „sexy“, dafür umso effizienter.
 
 Die Bayern holten im August den CL-Pot und Juve flog mit seinem überschätzten Kader gegen ein höchst durchschnittliches Lyon im Achtelfinale aus dem Wettbewerb. Mai 2050❗️In der Zwischenzeit haben die Bayern die Kristallkugel weitere viermal abgeräumt. Juve träumt indessen weiter vor sich hin und wartet nun seit 54 Jahren auf die Erlösung. Mittlerweile liegen dank Hoeness und Salihamidzic Millionen und Abermillionen in der Portokasse. Paratici hat in derselben Zeit einen dreistelligen Millionenbetrag an Schulden angehäuft. So läuft es, wenn man auf die falschen Pferdchen setzt❗️
