--- a/site/content/post/1-1.md
+++ b/site/content/post/1-1.md
@@ -2,7 +2,7 @@
 title: Aufs falsche Pferd gesetzt
 draft: false
 date: 2020-12-14T11:28:27.679Z
-image: img/8eba9a83-9992-4b7a-8bc4-c9e6436aa585.jpeg
+image: ""
 ---
 Real Madrid, Bayern München und mit Abstrichen der FC Barcelona❗️Das Trio, das in den vergangenen Jahren auf europäischer Bühne meistens ganz oben anzutreffen war. Im Gegensatz zu Manchester City, Paris und Juventus Turin. Sind es die Strukturen, die Vermarktung oder die Trainer, die über Erfolg und Misserfolg entschieden haben oder was steckt wirklich dahinter❓
 
